--- a/ECG_Asystole_Toolkit.ipynb
+++ b/ECG_Asystole_Toolkit.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "id": "8e19ccbf",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "id": "b7094694",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "id": "1577b125",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "id": "23ffbea7-a4eb-4545-a082-46257acb84b6",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 102,
    "id": "7931997e-7111-490c-aaa5-76b97a9c6744",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "id": "0971846b",
    "metadata": {
     "scrolled": true
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 104,
    "id": "3ef6da54-3bda-4e17-b5cb-ad60b118b889",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 105,
    "id": "710c83c7",
    "metadata": {},
    "outputs": [],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 106,
    "id": "7be6d567",
    "metadata": {},
    "outputs": [],
@@ -462,8 +462,8 @@
     "    prom_mult=6.0, height_mult=3.0,\n",
     "    width_min_ms=25.0, width_max_ms=120.0,\n",
     "    slope_mult=4.0, slope_win_ms=20.0,\n",
-    "    min_rr_sec=0.25\n",
-    "):\n",
+    "    min_rr_sec=0.25):\n",
+    "    \n",
     "    x = np.asarray(ecg, float).ravel()\n",
     "    N = x.size\n",
     "    xf = bandpass(x, fs, 5.0, 50.0, 4)\n",
@@ -472,8 +472,8 @@
     "        prom_mult=prom_mult, height_mult=height_mult,\n",
     "        width_min_ms=width_min_ms, width_max_ms=width_max_ms,\n",
     "        slope_mult=slope_mult, slope_win_ms=slope_win_ms,\n",
-    "        min_rr_sec=min_rr_sec\n",
-    "    )\n",
+    "        min_rr_sec=min_rr_sec)\n",
+    "    \n",
     "    win = int(win_sec * fs)\n",
     "    hop = int(hop_sec * fs)\n",
     "    n_win = 1 + max(0, (N - win) // hop)\n",
@@ -497,13 +497,12 @@
     "        \"first_asystole_time\": float(first_time),\n",
     "        \"rpeaks\": rpeaks,\n",
     "        \"filtered\": xf,\n",
-    "        \"fs\": float(fs)\n",
-    "    }\n"
+    "        \"fs\": float(fs)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
    "id": "6a671de4",
    "metadata": {},
    "outputs": [],
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "id": "4d885f79",
    "metadata": {},
    "outputs": [],
@@ -590,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 109,
    "id": "c76b4dee",
    "metadata": {},
    "outputs": [],
@@ -610,8 +609,7 @@
     "        f\"<p><b>Windows:</b> {windows}</p>\",\n",
     "        f\"<p><b>First asystole time (s):</b> {first_t:.2f}</p>\",\n",
     "        \"<h2>Detected pause segments (s)</h2>\",\n",
-    "        \"<ul>\",\n",
-    "    ]\n",
+    "        \"<ul>\",]\n",
     "    if pauses:\n",
     "        for a,b in pauses:\n",
     "            html.append(f\"<li>{a:.2f} – {b:.2f} (len={b-a:.2f}s)</li>\")\n",
@@ -629,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 110,
    "id": "056580a0",
    "metadata": {},
    "outputs": [
@@ -728,8 +726,7 @@
     "    \"first_asystole_time\": out[\"first_asystole_time\"],\n",
     "    \"mean_rr\": float(np.mean(rr)) if rr.size else None,\n",
     "    \"mean_hr\": float(np.mean(hr)) if hr.size else None,\n",
-    "    \"pause_segments\": pauses,\n",
-    "}\n",
+    "    \"pause_segments\": pauses,}\n",
     "import json\n",
     "Path(out_json).write_text(json.dumps(summary, indent=2), encoding=\"utf-8\")\n",
     "print(f\"Saved JSON summary to {out_json}\")\n",
@@ -755,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "f9ae9898",
    "metadata": {},
    "outputs": [],
